# precursors-client

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  LICENSE  PrecursorsClient.cbp  Readme.md  build.sh  cmake.sh
cmake/Modules/: FindHorde3D.cmake
content/models/ares/: Armor.material.xml  Basic_Hull.material.xml  Engine_Blue.material.xml  Gunmetal.material.xml  League_Orange.material.xml  Material.material.xml  ares.scene.xml
content/pipelines/: forward.pipeline.xml  globalSettings.material.xml
content/scenes/asteroids/: asteroids.scene.xml
content/textures/: grey2.dds
pchannels/: CMakeLists.txt  aes.cpp  aes.h  pchannels.cpp  pchannels.h  pchannels_global.h  pchannelsrequest.h  qnetstring.cpp
plogging/: CMakeLists.txt  plogging.cpp  plogging.h
preutil/: CMakeLists.txt  preutil.cpp  preutil.h  preutil_global.h
psettings/: CMakeLists.txt  psettings.cpp  psettings.h  psettings_global.h
qchannels/: CMakeLists.txt  aes.cpp  qchannels.cpp  qchannels.h  qchannels_global.h  qchannelsrequest.cpp  qchannelsrequest.h  qnetstring.cpp  qnetstring.h
resources/: SubWindow.qml  contexts.json  default.config.json  example.qml  main.qml
resources/js/: controls.js  entity_manager.js  game.js  level_manager.js  logging.js
resources/models/ares/: Heat_Sink.material.xml  ares.geo  ares.scene.xml
resources/qml/: DebugWindow.qml  GameWindow.qml  SubWindow.qml  SubWindowStyle.qml  launcher.qml  main.qml
resources/shaders/: model.shader
resources/shaders/utilityLib/: fragLighting.glsl
resources/source/models/ares/: ares.dae
src/: CMakeLists.txt  cameranodeobject.cpp  cameranodeobject.h  config.h.in  entity.cpp  entity.h  h3ditem.cpp  h3ditem.h  h3ditemanim.cpp  h3ditemanim.h  horde3ditem.cpp  horde3ditem.h  horde3ditemanim.cpp  horde3ditemanim.h  horde3dmanager.cpp  horde3dmanager.h  horde3dwindow.cpp  horde3dwindow.h  main.cpp  math3d.cpp  math3d.h  ogreitem.cpp  ogreitem.h  ogrenode.cpp
src/client/: CMakeLists.txt  entity.cpp  entity.h  horde3ditem.cpp  horde3ditemanim.cpp  horde3dmanager.cpp  horde3dmanager.h  horde3dwindow.cpp  horde3dwindow.h  main.cpp  math3d.cpp  math3d.h  timestamp_sync.cpp  timestamp_sync.h
src/controls/: CMakeLists.txt  axisanalogbinding.cpp  axisdigitalbinding.h  buttoninputsignal.cpp  buttoninputsignal.h  controlbinding.cpp  controlbinding.h  controlbindingmap.cpp  controlbindingmap.h  controlcontext.cpp  controlcontext.h  controls_global.h  controlslot.h  controlsmanager.cpp  controlsmanager.h  iinputdriver.h  inputdevice.h  inputdriver.cpp  inputdriver.h  inputsignal.cpp  inputsignal.h  joystickdevice.h  keyboarddevice.cpp  keyboarddevice.h  mousedevice.h
src/controls/bindings/: axisanalogbinding.cpp  axisanalogbinding.h  axisdigitalbinding.cpp  axisdigitalbinding.h  basedigitalbinding.cpp  basedigitalbinding.h  buttonanalogbinding.cpp  buttonanalogbinding.h  buttondigitalbinding.cpp  buttondigitalbinding.h  controlbinding.cpp  controlbinding.h
src/controls/devices/: genericdevice.cpp  genericdevice.h  inputdevice.cpp  inputdevice.h  joystickdevice.cpp  joystickdevice.h  keyboarddevice.cpp  keyboarddevice.h  mousedevice.cpp  mousedevice.h
src/controls/ois/: oisdriver.cpp  oisdriver.h
src/controls/qt/: qtdriver.cpp  qtdriver.h
src/controls/signals/: axisinputsignal.cpp  axisinputsignal.h  buttoninputsignal.cpp  buttoninputsignal.h  inputsignal.cpp  inputsignal.h
src/controls/slots/: analogcontrolslot.cpp  analogcontrolslot.h  controlslot.cpp  controlslot.h  digitalcontrolslot.cpp  digitalcontrolslot.h
src/pchannels/: CMakeLists.txt  aes.h  pchannels.cpp  pchannels.h  pchannelsrequest.cpp  qnetstring.cpp  qnetstring.h
src/plogging/: CMakeLists.txt  ansi.h  plogging.cpp  plogging.h  plogging_global.h
src/preutil/: CMakeLists.txt  preutil.cpp  preutil.h
src/psettings/: CMakeLists.txt  psettings.cpp  psettings.h
